--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <html>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/loadAnim.css">
@@ -58,6 +62,35 @@
 				</nav>
 				<div class="col-md-10 rounded" id="feed">
 					<!-- Main content goes here -->
+          <div class="row">
+            <div class="col-md-8 rounded col-md-offset-2">
+              <div id="headlineCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#headlineCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#headlineCarousel" data-slide-to="1"></li>
+                  <li data-target="#headlineCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <div class="carousel-inner" id="topHeadlineCarousel">
+
+                </div>
+                <a class="left carousel-control" href="#headlineCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#headlineCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+         <button class="btn btn-success" onclick="toTop()" id="topButton">Top</button>
+      </div>
+
 				</div>
 			</div>
 
