Working on Mixer API (WIP)

--- a/site/streams.html
+++ b/site/streams.html
@@ -5,10 +5,9 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
-    <script src="js/scrollButton.js"></script>
-
-    <!-- Load the Twitch embed script -->
-    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+    <script src="../js/scrollButton.js"></script>
+    <script src="../api/mixerAPI.js"></script>
+    <script src="../js/streams.js"></script>
 
 	  <head>
       <meta charset="UTF-8">
