--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
   <html>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/loadAnim.css">
@@ -60,36 +59,32 @@
                     <li class="list-inline-item" ><a href=""><i class="fab fa-github-square fa-2x"></i></a></li>
                   </ul>
 				</nav>
+
 				<div class="col-md-10 rounded" id="feed">
-					<!-- Main content goes here -->
-          <div class="row">
-            <div class="col-md-8 rounded col-md-offset-2">
-              <div id="headlineCarousel" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#headlineCarousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#headlineCarousel" data-slide-to="1"></li>
-                  <li data-target="#headlineCarousel" data-slide-to="2"></li>
-                </ol>
+                      <div id="headlineCarousel" class="carousel slide bg-dark text-center" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                          <li data-target="#headlineCarousel" data-slide-to="0" class="active"></li>
+                          <li data-target="#headlineCarousel" data-slide-to="1"></li>
+                          <li data-target="#headlineCarousel" data-slide-to="2"></li>
+                        </ol>
 
-                <div class="carousel-inner" id="topHeadlineCarousel">
+                        <div class="carousel-inner" id="topHeadlineCarousel">
 
+                        </div>
+                        <a class="carousel-control-prev" href="#headlineCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#headlineCarousel" role ="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
-                <a class="left carousel-control" href="#headlineCarousel" data-slide="prev">
-                  <span class="glyphicon glyphicon-chevron-left"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#headlineCarousel" data-slide="next">
-                  <span class="glyphicon glyphicon-chevron-right"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
             </div>
-          </div>
-        </div>
-      </div>
 
-         <button class="btn btn-success" onclick="toTop()" id="topButton">Top</button>
-      </div>
+            <button class="btn btn-success" onclick="toTop()" id="topButton">Top</button>
+        </div>
 
 				</div>
 			</div>
