Updated Article Presentation Format (#30)
* Updated Article Presentation Format

* Further Styling Updates

* Fixed issue where content pane is too short before article load

* Centered Logo

--- a/index.html
+++ b/index.html
@@ -20,18 +20,6 @@
       <title>Impact</title>
     </head>
     <body onload="loadAnim()">
-
-		<div class="container-fluid">
-            <header class="row justify-content-md-center">
-              <div class="col-md-2 text-center">
-                <img src="media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
-              </div>
-              <div class="col-md-10 text-center">
-                <img src="media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
-              </div>
-            </header>
-        </div>
-
 		<div id="loader">
 			<div class="cssload-thecube">
 				<div class="cssload-cube cssload-c1"></div>
@@ -42,9 +30,13 @@
 		</div>
 
 		<div style="display:none;" id="myDiv" class="animate-bottom container-fluid">
-			<div class="row bg-light">
+			<div id="content" class="row bg-light">
 				<nav class="col-md-2 bg-dark fixed">
 				  <!--Sidebar content-->
+                    <div class="logo-container">
+                        <img src="media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
+                        <img src="media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
+                    </div>
 				  <ul class="nav nav-pills nav-fill flex-column py-3">
 					<li class="nav-item"><a class="nav-link active" href="">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="site/favorites.html">Favorites</a></li>
