--- a/site/about.html
+++ b/site/about.html
@@ -6,21 +6,22 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 
-    <script src="js/scrollButton.js"></script>
+    <script src="../js/scrollButton.js"></script>
 
 	<head>
       <meta charset="UTF-8">
       <title>Impact</title>
     </head>
     <body>
-    <header class="jumbotron">
-      <h1>About Us</h1>
-    </header>
 
     <div class="container-fluid">
-        <div class="row bg-light">
+        <div id="content" class="row bg-light">
             <nav class="col-md-2 bg-dark fixed">
               <!--Sidebar content-->
+                <div class="logo-container">
+                    <img src="../media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
+                    <img src="../media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
+                </div>
               <ul class="nav nav-pills nav-fill flex-column py-3">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
