--- a/site/favorites.html
+++ b/site/favorites.html
@@ -12,21 +12,15 @@
         <title>Impact</title>
     </head>
     <body>
-        <div class="container-fluid">
-        <header class="row justify-content-md-center">
-            <div class="col-md-2 text-center">
-                <img src="../media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
-            </div>
-            <div class="col-md-10 text-center">
-                <img src="../media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
-            </div>
-        </header>
-        </div>
 
         <div class="container-fluid">
-            <div class="row bg-light">
+            <div id="content" class="row bg-light">
                 <nav class="col-md-2 bg-dark fixed">
                   <!--Sidebar content-->
+                    <div class="logo-container">
+                        <img src="../media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
+                        <img src="../media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
+                    </div>
                   <ul class="nav nav-pills nav-fill flex-column py-3">
                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="favorites.html">Favorites</a></li>
