--- a/site/streams.html
+++ b/site/streams.html
@@ -15,14 +15,14 @@
       <title>Impact</title>
     </head>
     <body>
-    <header class="jumbotron">
-      <h1>Streaming Now</h1>
-    </header>
-
     <div class="container-fluid">
-        <div class="row bg-light">
+        <div id="content" class="row bg-light">
             <nav class="col-md-2 bg-dark fixed">
               <!--Sidebar content-->
+              <div class="logo-container">
+                <img src="../media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
+                <img src="../media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
+              </div>
               <ul class="nav nav-pills nav-fill flex-column py-3">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
