--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                   </ul>
 				</nav>
 
-				<div class="col-md-10 rounded" id="feed">
-                      <div id="headlineCarousel" class="carousel slide bg-dark text-center" data-ride="carousel">
+				<div class="col-md-10 rounded">
+                      <div id="headlineCarousel" class="row carousel slide bg-secondary text-center" data-ride="carousel">
                         <ol class="carousel-indicators">
                           <li data-target="#headlineCarousel" data-slide-to="0" class="active"></li>
                           <li data-target="#headlineCarousel" data-slide-to="1"></li>
@@ -71,6 +71,8 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
+                    </div>
+                    <div class="row" id="feed">
                     </div>
                 </div>
             </div>
