Made overlay more visible and added link to title

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   </ul>
 				</nav>
 
-				<div class="col-md-10 rounded">
+				<div class="col-md-10 rounded" style="background: #e6e6e6">
                       <div id="headlineCarousel" class="row carousel slide bg-secondary text-center" data-ride="carousel">
                         <ol class="carousel-indicators">
                           <li data-target="#headlineCarousel" data-slide-to="0" class="active"></li>
@@ -72,7 +72,7 @@
                             <span class="sr-only">Next</span>
                         </a>
                     </div>
-                    <div class="row" id="feed">
+                    <div id="feed">
                     </div>
                 </div>
             </div>
