Updating the top scroll button for all pages and fixed styling issues on about us page. Also added a button to show/hide answers.

--- a/site/news.html
+++ b/site/news.html
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <button onclick="toTop()" id="topButton">Top</button>
+        <button class="btn btn-success" onclick="toTop()" id="topButton">Top</button>
     </div>
 
     <footer class="footer">
