--- a/site/streams.html
+++ b/site/streams.html
@@ -78,7 +78,7 @@
             </div>
         </div>
 
-        <button onclick="toTop()" id="topButton">Top</button>
+        <button class="btn btn-success" onclick="toTop()" id="topButton">Top</button>
     </div>
 
     <footer class="footer">
