minor tweaks & fixes
- added footer to about page
- added about page styling & edited some text
- added license button to toolbar
- edited styling on home page in the carousel and the cards
- linked social media buttons on all pages
- added some fun animation to the Impact logo

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="css/loadAnim.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="api/newsAPI.js"></script>
     <script src="js/scrollButton.js"></script>
     <script src="js/loadAnim.js"></script>
     <script src="js/index.js"></script>
-
-	<head>
+ 
+ <head>
       <meta charset="UTF-8">
       <title>Impact</title>
     </head>
@@ -33,7 +34,7 @@
 			<div id="content" class="row bg-light">
 				<nav class="col-md-2 bg-dark fixed">
 				  <!--Sidebar content-->
-                    <div class="logo-container">
+                    <div class="logo-container animated bounceInLeft">
                         <img src="media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
                         <img src="media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
                     </div>
