--- a/site/about.html
+++ b/site/about.html
@@ -41,10 +41,10 @@
                     <li class="nav-item"><a class="nav-link active" href="">About Us</a></li>
                 </ul>
                 <ul class="list-inline text-center">
-                    <li class="list-inline-item" ><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
-                    <li class="list-inline-item" ><a href=""><i class="fab fa-twitter-square fa-2x"></i></a></li>
-                    <li class="list-inline-item" ><a href=""><i class="fab fa-twitch fa-2x"></i></a></li>
-                    <li class="list-inline-item" ><a href=""><i class="fab fa-github-square fa-2x"></i></a></li>
+					<li class="list-inline-item" ><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.twitch.tv" target="_blank"><i class="fab fa-twitch fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.github.com" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
                 </ul>
             </nav>
             <div class="col-md-10 rounded">
@@ -56,7 +56,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Thomas (TJ) Leach</h5>
                                 <p class="card-text">TJ is the man with a plan.</p>
-                                <a href="#" class="btn btn-primary">Git Hub Profile</a>
+                                <a href="#" class="btn btn-primary">GitHub Profile</a>
                             </div>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Julian</h5>
                                 <p class="card-text">Julian puts the J in java script.</p>
-                                <a href="#" class="btn btn-primary">Git Hub Profile</a>
+                                <a href="#" class="btn btn-primary">GitHub Profile</a>
                             </div>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Tim</h5>
                                 <p class="card-text">Tim is great with twitch.</p>
-                                <a href="#" class="btn btn-primary">Git Hub Profile</a>
+                                <a href="#" class="btn btn-primary">GitHub Profile</a>
                             </div>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Walter</h5>
                                 <p class="card-text">Walt's got no faults. Repo Maintainer.</p>
-                                <a href="#" class="btn btn-primary">Git Hub Profile</a>
+                                <a href="https://github.com/walthill" class="btn btn-primary">GitHub Profile</a>
                             </div>
                         </div>
                     </div>
@@ -98,12 +98,12 @@
                             <div class="card-body">
                                 <h5 class="card-title">Tyler</h5>
                                 <p class="card-text">Testing Tyler.</p>
-                                <a href="#" class="btn btn-primary">Git Hub Profile</a>
+                                <a href="#" class="btn btn-primary">GitHub Profile</a>
                             </div>
                         </div>
                     </div>
                 </div>
-
+				<hr>
                 <!-- Esports quiz adapted from this website quiz http://www.hungrypiranha.org/make-a-website/html-quiz -->
                 <div class="row">
                     <div class="col-sm-12">
@@ -170,7 +170,16 @@
                                 <p><strong>Question 4:</strong> The correct answer is <strong>d</strong>.</p>
                             </div>
                         </div>
+					<hr>
                     </div>
+					
+					<div class="navbar navbar-default navbar-fixed-bottom">
+						<div class="container">
+							<p class="navbar-text">© 2018 - Powered by Electron, the News API, & the Apache 2.0 license
+							</p>
+						</div>
+					</div>
+
                 </div>
             </div>
         </div>
