--- a/site/news.html
+++ b/site/news.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/loadAnim.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<script src="../api/newsAPI.js"></script>
     <script src="../js/loadAnim.js"></script>
     <script src="../js/scrollButton.js"></script>
@@ -29,7 +30,7 @@
 			<div id="content" class="row bg-light">
 				<nav class="col-md-2 bg-dark fixed">
 				  <!--Sidebar content-->
-                    <div class="logo-container">
+                    <div class="logo-container animated bounceInLeft">
                         <img src="../media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
                         <img src="../media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
                     </div>
@@ -41,10 +42,10 @@
 					<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
 				  </ul>
                   <ul class="list-inline text-center">
-                    <li class="list-inline-item" ><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
-                    <li class="list-inline-item" ><a href=""><i class="fab fa-twitter-square fa-2x"></i></a></li>
-                    <li class="list-inline-item" ><a href=""><i class="fab fa-twitch fa-2x"></i></a></li>
-                    <li class="list-inline-item" ><a href=""><i class="fab fa-github-square fa-2x"></i></a></li>
+					<li class="list-inline-item" ><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.twitch.tv" target="_blank"><i class="fab fa-twitch fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.github.com" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
                   </ul>
 				</nav>
 				<div class="col-md-10 rounded" id="feed">
