--- a/site/streams.html
+++ b/site/streams.html
@@ -31,10 +31,10 @@
                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
               </ul>
               <ul class="list-inline text-center">
-                <li class="list-inline-item" ><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
-                <li class="list-inline-item" ><a href=""><i class="fab fa-twitter-square fa-2x"></i></a></li>
-                <li class="list-inline-item" ><a href=""><i class="fab fa-twitch fa-2x"></i></a></li>
-                <li class="list-inline-item" ><a href=""><i class="fab fa-github-square fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.twitch.tv" target="_blank"><i class="fab fa-twitch fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href="https://www.github.com" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
               </ul>
             </nav>
             <div class="col-md-10 rounded" id="twitchFeed">
