--- a/site/favorites.html
+++ b/site/favorites.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <script src="../js/favorites.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
 
 	<head>
         <meta charset="UTF-8">
